--- a/player_re_identification.ipynb
+++ b/player_re_identification.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "12TWRWkOAFDMc812B_OjkXPBK1Ane4R3g",
-      "authorship_tag": "ABX9TyPXcTlaE7hjAzS96LkGT63Y"
+      "authorship_tag": "ABX9TyOOotOgDWIRsdoG2ZMY1+z2"
     },
     "kernelspec": {
       "name": "python3",
@@ -424,18 +424,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "np.float = float  # <- Add this line before other imports\n"
-      ],
-      "metadata": {
-        "id": "pcAIGFnD7khc"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import cv2\n",
         "import numpy as np\n",
         "from tqdm import tqdm\n",
@@ -446,7 +434,8 @@
         "import torch\n",
         "from torch.nn import functional as F\n",
         "from pathlib import Path\n",
-        "from dataclasses import dataclass"
+        "from dataclasses import dataclass\n",
+        "np.float = float"
       ],
       "metadata": {
         "id": "9EYcxk3E6HKj"
@@ -458,10 +447,10 @@
       "cell_type": "code",
       "source": [
         "# ---------------------- CONFIG ----------------------\n",
-        "path_project = Path(\"drive/MyDrive/Projects/track/\")\n",
-        "video_path = path_project / \"15sec_input_720p.mp4\"\n",
-        "path_weights = path_project / \"best.pt\"\n",
-        "output_video_path = path_project / (video_path.stem + \"_tracked1.mp4\")"
+        "path_project = Path(\"drive/MyDrive/Projects/track/\") #path\n",
+        "video_path = path_project / \"15sec_input_720p.mp4\" #input path\n",
+        "path_weights = path_project / \"best.pt\" #model path\n",
+        "output_video_path = path_project / (video_path.stem + \"_tracked1.mp4\") #output path"
       ],
       "metadata": {
         "id": "FSQs0zJc7y5P"
